#                                                                                                          #
############################################################################################################


For more details, please see the README file.

January,  , 2024, AnnotSV version 3.4
	- Add "NCBI_gene_ID" annotation
	- Update of the "contact" recommendations in output (from email to GitHub)

January, 15, 2024, AnnotSV version 3.3.9
	- Fix a bug when setting the "hpoVersion" variable (issue 207)

December, 22, 2023, AnnotSV version 3.3.8
	- Add of 34 unit tests

November, 03, 2023, AnnotSV version 3.3.7
	- Fix a domain error (issue 199)
	- Include code to allow FranceGenRef benign SV annotation (856 WGS with ancestries in different regions of France)
	  WARNING: not supplied as part of the AnnotSV sources. 
	- Optimize access to the exomiser application properties file for use with singularity/bioconda
	- Allow uppercase file extensions (".VCF", ".BED" or ".VCF.GZ") 
	- Use the new format of the COSMIC data source 
	- Update of the documentation in $ANNOTSV/docs/ 
	- Update of the documentation to install AnnotSV human annotations in a local directory (INSTALL_annotations.sh) 
	- Optimize a regexp
	- Fix variantconvert file name

June, 01, 2023, AnnotSV version 3.3.6
	- Add bug fix concerning some INV bracketed. The second breakend notation (which is just the reciprocal of the first) is now always identified as the mate breakend.
	- Sample IDs with missing alleles in the GT fields ("./." or ".|.") are now reported in the "Samples_ID" output field
	- Refactor variantconvert code
	- Allow description of REF/ALT values in SV input files with lowercase ACGT
	- Update of the .gitignore file 
	- Add bug fix to report only a subset of the annotation columns provided by AnnotSV 
	- Add of warning messages for the ranking (in case of missing required annotations)
	- Update the display of the default command line

April, 14, 2023, AnnotSV version 3.3.5